--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "0.0.0",
+  "name": "Jumpstarter",
+  "version": "0.0.1",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -13,6 +13,6 @@
     "requirejs": "~2.1.8",
     "jquery": "~2.0.3",
     "foundation": "~4.3.1",
-    "underscore": "~1.5.1",
+    "underscore": "~1.5.1"
   }
 }
