--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "grunt": "~0.4.1",
     "grunt-deployments": "~0.1.5",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-requirejs": "~0.4.1"
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-rsync": "~0.2.1"
   },
-  "dependencies": {
-    "grunt-rsync": "~0.2.0"
-  }
 }
