adding some grunt tasks

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "requirejs": "~2.1.8",
     "jquery": "~2.0.3",
-    "foundation": "~4.3.1",
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "foundation": "~5.0.2"
   }
 }
