--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "Jumpstart",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -9,5 +9,8 @@
     "grunt-rsync": "~0.2.1",
     "bower": "~0.10.0",
     "grunt-bower-requirejs": "~0.6.0"
+  },
+  "dependencies": {
+    "grunt-requirejs": "~0.4.0"
   }
 }
