--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "Jumpstart",
+  "name": "",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-deployments": "~0.1.5",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-rsync": "~0.2.1",
     "bower": "~0.10.0",
-    "grunt-bower-requirejs": "~0.6.0"
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-bower-concat": "~0.2.4",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-shell": "~0.6.4",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-compass": "~0.7.0",
+    "grunt-concurrent": "~0.4.3"
   },
-  "dependencies": {
-    "grunt-requirejs": "~0.4.0"
+  "scripts": {
+    "postinstall": "grunt hookmeup"
   }
 }
