--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-shell": "~0.6.4",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compass": "~0.7.0"
+    "grunt-contrib-compass": "~0.7.0",
+    "grunt-concurrent": "~0.4.3"
   },
   "scripts": {
     "postinstall": "grunt hookmeup"
