--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-deployments": "~0.1.5",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-rsync": "~0.2.1",
     "bower": "~0.10.0",
-    "grunt-contrib-uglify": "~0.3.2",
+    "grunt": "~0.4.1",
     "grunt-bower-concat": "~0.2.4",
-    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-shell": "~0.6.4",
-    "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-compass": "~0.7.0",
-    "grunt-concurrent": "~0.4.3"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-deployments": "~0.1.5",
+    "grunt-rsync": "~0.2.1",
+    "grunt-shell": "~0.6.4"
   },
   "scripts": {
     "postinstall": "grunt hookmeup"
