--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bower": "~0.10.0",
     "grunt": "~0.4.1",
     "grunt-bower-concat": "~0.2.4",
+    "grunt-browserify": "^3.8.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -14,9 +15,24 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-deployments": "~0.1.5",
     "grunt-rsync": "~0.2.1",
-    "grunt-shell": "~0.6.4"
+    "underscore": "^1.8.3",
+    "browserify-shim": "~3.8.10",
+    "grunt-shell": "~0.6.4",
+    "foundation-sites": "^5.5.2",
+    "jquery": "^2.1.4"
   },
   "scripts": {
     "postinstall": "grunt hookmeup"
+  },
+  "browser": {
+    "jquery": "./node_modules/jquery/dist/jquery.js",
+    "foundation": "./node_modules/foundation-sites/js/foundation.js"
+  },
+  "browserify-shim": {
+    "jquery": "$",
+    "foundation": "foundation"
+  },
+  "browserify": {
+    "transform": ["browserify-shim"]
   }
 }
