--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "",
   "version": "0.1.0",
   "devDependencies": {
+    "browserify-shim": "~3.8.10",
+    "foundation-sites": "^5.5.2",
     "grunt": "~0.4.1",
     "grunt-bower-concat": "~0.2.4",
     "grunt-browserify": "^3.8.0",
@@ -12,13 +14,13 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-csscomb": "^3.1.0",
     "grunt-deployments": "~0.1.5",
+    "grunt-parker": "^0.1.3",
     "grunt-rsync": "~0.2.1",
-    "underscore": "^1.8.3",
-    "browserify-shim": "~3.8.10",
     "grunt-shell": "~0.6.4",
-    "foundation-sites": "^5.5.2",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "postinstall": "grunt hookmeup"
@@ -32,6 +34,8 @@
     "foundation": "foundation"
   },
   "browserify": {
-    "transform": ["browserify-shim"]
+    "transform": [
+      "browserify-shim"
+    ]
   }
 }
