--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "grunt-deployments": "~0.1.5",
     "grunt-parker": "^0.1.3",
     "grunt-rsync": "~0.2.1",
+    "grunt-sass": "^1.1.0",
     "grunt-shell": "~0.6.4",
     "jquery": "^2.1.4",
+    "load-grunt-tasks": "^3.3.0",
     "underscore": "^1.8.3"
   },
   "scripts": {
