--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "devDependencies": {
     "browserify-shim": "~3.8.10",
-    "foundation-sites": "^5.5.2",
+    "compass-importer": "^0.1.3",
+    "foundation-sites": "^6.0.6",
     "grunt": "~0.4.1",
     "grunt-bower-concat": "~0.2.4",
     "grunt-browserify": "^3.8.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "^0.10.0",
@@ -25,11 +25,10 @@
     "underscore": "^1.8.3"
   },
   "scripts": {
-    "postinstall": "grunt hookmeup"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
-    "foundation": "./node_modules/foundation-sites/js/foundation.js"
+    "foundation": "./node_modules/foundation-sites/dist/foundation.js"
   },
   "browserify-shim": {
     "jquery": "$",
