--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "devDependencies": {
     "browserify-shim": "~3.8.10",
     "compass-importer": "^0.1.3",
-    "foundation-sites": "^6.0.6",
-    "grunt": "~0.4.1",
+    "foundation-sites": "5.5.3",
+    "grunt": "~0.4.5",
     "grunt-bower-concat": "~0.2.4",
     "grunt-browserify": "^3.8.0",
     "grunt-contrib-clean": "~0.5.0",
@@ -16,13 +16,13 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-csscomb": "^3.1.0",
     "grunt-deployments": "~0.1.5",
-    "grunt-parker": "^0.1.3",
     "grunt-rsync": "~0.2.1",
     "grunt-sass": "^1.1.0",
     "grunt-shell": "~0.6.4",
     "jquery": "^2.1.4",
     "load-grunt-tasks": "^3.3.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "node-bourbon": "^4.2.3"
   },
   "scripts": {
   },
