--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-uglify": "~2.0.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-grunticon": "^2.3.1",
     "grunt-sass": "^1.1.0",
     "grunt-shell": "~0.6.4",
+    "grunt-shipit": "^1.0.0",
     "jquery": "^2.1.4",
     "load-grunt-tasks": "^3.3.0",
     "node-bourbon": "^4.2.3",
+    "shipit-assets": "^1.3.6",
+    "shipit-cli": "^1.5.2",
+    "shipit-db": "^1.8.1",
+    "shipit-deploy": "^2.4.0",
+    "shipit-shared": "^4.4.2",
     "underscore": "^1.8.3"
   },
   "scripts": {},
