--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.18.0",
     "browserify-shim": "~3.8.10",
+    "grunt-browser-sync": "^2.18.0",
     "foundation-sites": "6.2.3",
     "grunt": "~0.4.5",
     "grunt-browser-sync": "^2.2.0",
     "grunt-browserify": "^5.0.0",
+    "grunt-chokidar": "^1.0.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "^1.0.2",
