--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.0",
     "browserify-shim": "~3.8.10",
-    "grunt-browser-sync": "^2.18.0",
+    "grunt-browser-sync": "^2.2.0",
     "foundation-sites": "6.2.3",
     "grunt": "~0.4.5",
-    "grunt-browser-sync": "^2.2.0",
     "grunt-browserify": "^5.0.0",
     "grunt-chokidar": "^1.0.0",
     "grunt-contrib-clean": "~0.5.0",
@@ -57,6 +56,7 @@
     ]
   },
   "dependencies": {
+    "grunt-grunticon": "^2.3.1",
     "node-shutdown-manager": "^0.1.2"
   }
 }
