updating jumpstart to most recent foundation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "browser-sync": "^2.18.0",
     "browserify-shim": "~3.8.10",
     "grunt-browser-sync": "^2.2.0",
-    "foundation-sites": "6.2.3",
+    "foundation-sites": "6.4.3",
     "grunt": "~0.4.5",
     "grunt-browserify": "^5.0.0",
     "grunt-chokidar": "^1.0.0",
@@ -21,7 +21,7 @@
     "grunt-sass": "^1.1.0",
     "grunt-shell": "^0.6.4",
     "grunt-vagrantup": "^0.2.0",
-    "jquery": "^2.1.4",
+    "jquery": ">=3.0.0",
     "load-grunt-tasks": "^3.3.0",
     "node-bourbon": "^4.2.3",
     "shipit-assets": "^1.3.6",
