--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.0",
     "browserify-shim": "~3.8.10",
-    "grunt-browser-sync": "^2.2.0",
     "foundation-sites": "6.4.3",
     "grunt": "~0.4.5",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-browserify": "^5.0.0",
     "grunt-chokidar": "^1.0.0",
     "grunt-contrib-clean": "~0.5.0",
@@ -17,6 +17,7 @@
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-uglify": "~2.0.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-githooks": "^0.6.0",
     "grunt-grunticon": "^2.3.1",
     "grunt-sass": "^1.1.0",
     "grunt-shell": "^0.6.4",
@@ -54,6 +55,7 @@
     ]
   },
   "dependencies": {
+    "grunt-autoprefixer": "^3.0.4",
     "grunt-grunticon": "^2.3.1",
     "node-shutdown-manager": "^0.1.2"
   }
