--- a/package.json
+++ b/package.json
@@ -9,29 +9,25 @@
     "browserify-shim": "~3.8.10",
     "foundation-sites": "6.4.3",
     "grunt": "~0.4.5",
+    "grunt-autoprefixer": "^3.0.4",
     "grunt-browser-sync": "^2.2.0",
     "grunt-browserify": "^5.0.0",
     "grunt-chokidar": "^1.0.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-uglify": "~2.0.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-githooks": "^0.6.0",
     "grunt-grunticon": "^2.3.1",
     "grunt-sass": "^1.1.0",
     "grunt-shell": "^0.6.4",
-    "grunt-vagrantup": "^0.2.0",
+    "grunt-svgstore": "^1.0.0",
     "jquery": ">=3.0.0",
     "load-grunt-tasks": "^3.3.0",
-    "node-bourbon": "^4.2.3",
-    "shipit-assets": "^1.3.6",
-    "shipit-cli": "^1.5.2",
-    "shipit-deploy": "^2.4.0",
-    "shipit-shared": "^4.4.2",
     "underscore": "^1.8.3"
   },
-  "scripts": {},
+  "scripts": {
+    "postinstall": "grunt hookmeup"
+  },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
     "foundation": "./node_modules/foundation-sites/dist/foundation.js"
@@ -54,9 +50,5 @@
       ]
     ]
   },
-  "dependencies": {
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-grunticon": "^2.3.1",
-    "node-shutdown-manager": "^0.1.2"
-  }
+  "dependencies": {}
 }
